Correct jumper image reference

--- a/hardware.yml
+++ b/hardware.yml
@@ -5,5 +5,5 @@
   img: resistor
   url: http://shop.pimoroni.com/products/resistor-grab-bag
 - name: 4 x Female-to-female jumper leads
-  img: female-to-female-jumper
+  img: jumper-female-to-female
   url: http://shop.pimoroni.com/products/jumper-jerky
