--- a/extras.yml
+++ b/extras.yml
@@ -1,6 +1,6 @@
 - Cardboard tube
-- Plasticine or blu tack
-- Glue or cellotape
+- Plasticine or Blu-tack
+- Glue or Sellotape
 - Pencil
 - Sheet of A4 paper
 - Colouring pencils
