--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ description: Make your own robot with a blinking antenna
 original_url: https://raspberrypi.org/learning/robot-antenna
 theme: red
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
