update project theme

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ title: Robot Antenna
 hero_image: images/banner.png
 description: Make your own robot with a blinking antenna
 original_url: https://raspberrypi.org/learning/robot-antenna
-theme: red
+theme: blue
 duration: 2
 listed: true
 ingredient: false
