--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,4 +18,4 @@ steps:
 - title: Connect your antenna
 - title: Make the antenna flash with code
 - title: Make a cardboard robot
-- title: What next?
+- title: "Challenge: beeps and flashes"
