--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Robot Antenna
+title: Robot antenna
 hero_image: images/banner.png
 description: Make your own robot with a blinking antenna
 original_url: https://raspberrypi.org/learning/robot-antenna
