--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,25 +1,15 @@
 title: Robot antenna
 hero_image: images/banner.png
 description: Control a robot's antenna light with a Raspberry Pi and code blocks
-original_url: https://raspberrypi.org/learning/robot-antenna
-theme: blue
-duration: 2
 listed: true
-ingredient: false
 copyedit: true
-curriculum: 1, design-1, programming-1, phys-comp-1, manufacture-1, community-0
-interests: ''
-technologies: electronic-components, scratch
-site_areas: projects
-hardware: electronic-components
-software: scratch
-version: 4
-last_tested: 2017-11-01
+version: 4.1.0
+last_tested: 2018-01-17
 steps: 
 - title: Introduction
-- title: What you will need
 - title: Make an antenna
 - title: Connect your antenna
 - title: Make the antenna flash with code
 - title: Make a cardboard robot
 - title: "Challenge: beeps and flashes"
+  challenge: true
