--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 title: Robot antenna
 hero_image: images/banner.png
 description: Control a robot's antenna light with a Raspberry Pi and code blocks
@@ -5,12 +6,14 @@ listed: true
 copyedit: true
 version: 4.1.0
 last_tested: 2019-08-19
-steps: 
+steps:
 - title: Introduction
+  completion: engaged
 - title: Make an antenna
 - title: Connect your antenna
 - title: Make the antenna flash with code
+  completion: internal
 - title: Make a cardboard robot
-- title: "Challenge: beeps and flashes"
+- title: 'Challenge: beeps and flashes'
   challenge: true
 - title: What next?
