--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,12 +8,14 @@ version: 4.1.0
 last_tested: 2019-08-19
 steps:
 - title: Introduction
-  completion: engaged
 - title: Make an antenna
 - title: Connect your antenna
+  completion:
+  - engaged
 - title: Make the antenna flash with code
-  completion: internal
 - title: Make a cardboard robot
+  completion:
+  - internal
 - title: 'Challenge: beeps and flashes'
   challenge: true
 - title: What next?
